Use 'fonticoncolumn' in SMART grids.
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault/var/www/openmediavault/css/theme-all.css
+++ b/deb/openmediavault/var/www/openmediavault/css/theme-all.css
@@ -76,7 +76,8 @@
 	color: #ff3b30;
 }
 .x-color-green,
-.x-color-boolean-true {
+.x-color-boolean-true,
+.x-color-good {
 	color: #4cd964;
 }
 .x-color-gray,
