Fix display issue in shutdown/404 page.
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault/var/www/openmediavault/css/theme-all.scss
+++ b/deb/openmediavault/var/www/openmediavault/css/theme-all.scss
@@ -142,18 +142,9 @@
 }
 .error-page .error-icon {
 	position: absolute;
-	width: 100%;
-	height: 100%;
-	left: 0px;
-	top: 0px;
-	right: 0px;
-	background: url("/images/error.png");
-	background: url("/images/error.svg"), none;
-	background-attachment: fixed;
-	background-repeat: no-repeat;
-	background-color: transparent;
-	background-position: center;
-	background-size: 64px;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
 /******************************************************************************/
 /* Workspace page                                                             */
