--- a/deb/openmediavault/var/www/openmediavault/css/theme-triton.scss
+++ b/deb/openmediavault/var/www/openmediavault/css/theme-triton.scss
@@ -227,10 +227,13 @@ body > .x-mask {
 }
 /******************************************************************************/
 /* Buttons */
+.x-btn-default-small,
+.x-btn-default-toolbar-small {
+	border-radius: 3px;
+}
 .x-btn-default-small {
 	border-color: $omv-color-default;
 	background-color: $omv-color-default;
-	border-radius: 2px;
 }
 .x-btn-focus.x-btn-default-small {
 	border-color: $omv-color-darker;
