--- a/deb/openmediavault/srv/salt/omv/deploy/acpid/files/etc-acpi-events-powerbtn.j2
+++ b/deb/openmediavault/srv/salt/omv/deploy/acpid/files/etc-acpi-events-powerbtn.j2
@@ -1,8 +1,9 @@
+{% set nothing = salt['pillar.get']('default:OMV_ACPID_POWERBTN_ACTION_NOTHING', '/bin/true') -%}
 {% set shutdown = salt['pillar.get']('default:OMV_ACPID_POWERBTN_ACTION_SHUTDOWN', 'shutdown -h -P now "Power button pressed"') -%}
 {% set standby = salt['pillar.get']('default:OMV_ACPID_POWERBTN_ACTION_STANDBY', 'omv-pm-standby') -%}
 event=button[ /]power (PWR.||PBTN)
 {%- if powerbtn == 'nothing' %}
-#action=
+action={{ nothing }}
 {%- endif %}
 {%- if powerbtn == 'shutdown' %}
 action={{ shutdown }}
