Rename OMV Salt module.
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault/srv/salt/omv/deploy/halt/files/etc-default-halt.j2
+++ b/deb/openmediavault/srv/salt/omv/deploy/halt/files/etc-default-halt.j2
@@ -1,5 +1,5 @@
 {%- set halt = salt['pillar.get']('default:OMV_HALT_HALT', 'poweroff') -%}
-{%- set interfaces = salt['omv.get_config_by_filter'](
+{%- set interfaces = salt['omv_conf.get_by_filter'](
   'conf.system.network.interface',
   {'operator': 'equals', 'arg0': 'wol', 'arg1': '1'}) -%}
 # Default behaviour of shutdown -h / halt. Set to "halt" or "poweroff".
