--- a/deb/openmediavault/srv/salt/omv/deploy/avahi/services/files/smb.j2
+++ b/deb/openmediavault/srv/salt/omv/deploy/avahi/services/files/smb.j2
@@ -10,7 +10,7 @@
         <type>_adisk._tcp</type>
         <txt-record>sys=waMa=0,adVF=0x100</txt-record>
 {%- for share in shares %}
-        <txt-record>dk{{ loop.index0 }}=adVN={{ salt['omv.get_sharedfolder_name'](share.sharedfolderref) }},adVF=0x82</txt-record>
+        <txt-record>dk{{ loop.index0 }}=adVN={{ salt['omv_conf.get_sharedfolder_name'](share.sharedfolderref) }},adVF=0x82</txt-record>
 {%- endfor %}
     </service>
     <service>
