--- a/deb/openmediavault/srv/salt/omv/deploy/nfs/files/etc-exports.j2
+++ b/deb/openmediavault/srv/salt/omv/deploy/nfs/files/etc-exports.j2
@@ -1,21 +1,21 @@
 {%- set separator = ' ' %}
 {%- set export_dir = salt['pillar.get']('default:OMV_NFSD_EXPORT_DIR', '/export') -%}
 {%- set v4_default_options = salt['pillar.get']('default:OMV_NFSD_V4_DEFAULT_EXPORT_OPTIONS', 'ro,fsid=0,root_squash,no_subtree_check,hide') -%}
-{%- set shares_v3 = salt['omv.get_config_by_filter'](
+{%- set shares_v3 = salt['omv_conf.get_by_filter'](
   'conf.service.nfs.share',
   {'operator': 'distinct', 'arg0': 'sharedfolderref'}) -%}
-{%- set shares_v4 = salt['omv.get_config_by_filter'](
+{%- set shares_v4 = salt['omv_conf.get_by_filter'](
   'conf.service.nfs.share',
   {'operator': 'distinct', 'arg0': 'client'}) -%}
 {{ pillar['headers']['multiline'] }}
 # /etc/exports: the access control list for filesystems which may be exported
 #               to NFS clients.  See exports(5).
 {% for share_v3 in shares_v3 %}
-{%- set shares = salt['omv.get_config_by_filter'](
+{%- set shares = salt['omv_conf.get_by_filter'](
   'conf.service.nfs.share',
   {'operator': 'stringEquals', 'arg0': 'sharedfolderref', 'arg1': share_v3.sharedfolderref}) %}
 {%- for share in shares %}
-{%- set sharedfolder = salt['omv.get_config']('conf.system.sharedfolder', share.sharedfolderref) %}
+{%- set sharedfolder = salt['omv_conf.get']('conf.system.sharedfolder', share.sharedfolderref) %}
 {%- if loop.first %}{{ export_dir | path_join(sharedfolder.name) }}{% endif -%}
 {{ separator }}{{ share.client | trim }}(fsid={{ loop.index }},{{ share.options }}{% if share.extraoptions | length > 0 %},{{ share.extraoptions }}{% endif %})
 {% endfor -%}
