--- a/deb/openmediavault/srv/salt/omv/deploy/rsync/files/cron-rsync-script.j2
+++ b/deb/openmediavault/srv/salt/omv/deploy/rsync/files/cron-rsync-script.j2
@@ -5,19 +5,19 @@
 {%- set logfile = salt['pillar.get']('default:OMV_RSYNC_LOGFILE', '/var/log/rsync.log') -%}
 {%- set runfile = '/var/run' | path_join(script_prefix ~ job.uuid) -%}
 {%- if job.type == 'local' -%}
-  {%- set srcuri = salt['omv.get_sharedfolder_path'](job.src.sharedfolderref) -%}
-  {%- set srcmntdir = salt['omv.get_sharedfolder_mount_dir'](job.src.sharedfolderref) -%}
-  {%- set desturi = salt['omv.get_sharedfolder_path'](job.dest.sharedfolderref) -%}
-  {%- set destmntdir = salt['omv.get_sharedfolder_mount_dir'](job.dest.sharedfolderref) -%}
+  {%- set srcuri = salt['omv_conf.get_sharedfolder_path'](job.src.sharedfolderref) -%}
+  {%- set srcmntdir = salt['omv_conf.get_sharedfolder_mount_dir'](job.src.sharedfolderref) -%}
+  {%- set desturi = salt['omv_conf.get_sharedfolder_path'](job.dest.sharedfolderref) -%}
+  {%- set destmntdir = salt['omv_conf.get_sharedfolder_mount_dir'](job.dest.sharedfolderref) -%}
 {%- elif job.type == 'remote' -%}
   {%- if job.mode == 'push' -%}
-    {%- set srcuri = salt['omv.get_sharedfolder_path'](job.src.sharedfolderref) -%}
-    {%- set srcmntdir = salt['omv.get_sharedfolder_mount_dir'](job.src.sharedfolderref) -%}
-    {%- set desturi = salt['omv.get_sharedfolder_path'](job.dest.uri) -%}
+    {%- set srcuri = salt['omv_conf.get_sharedfolder_path'](job.src.sharedfolderref) -%}
+    {%- set srcmntdir = salt['omv_conf.get_sharedfolder_mount_dir'](job.src.sharedfolderref) -%}
+    {%- set desturi = salt['omv_conf.get_sharedfolder_path'](job.dest.uri) -%}
   {%- elif job.mode == 'pull' -%}
-    {%- set srcuri = salt['omv.get_sharedfolder_path'](job.src.uri) -%}
-    {%- set desturi = salt['omv.get_sharedfolder_path'](job.dest.sharedfolderref) -%}
-    {%- set destmntdir = salt['omv.get_sharedfolder_mount_dir'](job.dest.sharedfolderref) -%}
+    {%- set srcuri = salt['omv_conf.get_sharedfolder_path'](job.src.uri) -%}
+    {%- set desturi = salt['omv_conf.get_sharedfolder_path'](job.dest.sharedfolderref) -%}
+    {%- set destmntdir = salt['omv_conf.get_sharedfolder_mount_dir'](job.dest.sharedfolderref) -%}
   {%- endif -%}
 {%- endif -%}
 #!/bin/sh
