Adapt plugin to OMV5 and Debian 10.
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault/srv/salt/omv/deploy/collectd/plugins/files/collectd-df.j2
+++ b/deb/openmediavault/srv/salt/omv/deploy/collectd/plugins/files/collectd-df.j2
@@ -1,8 +1,8 @@
 LoadPlugin df
 <Plugin df>
 	MountPoint "/"
-{% for mountpoint in mountpoints -%}
+{%- for mountpoint in mountpoints %}
 	MountPoint "{{ mountpoint.dir }}"
-{% endfor -%}
+{%- endfor %}
 	IgnoreSelected false
 </Plugin>
