--- a/deb/openmediavault/srv/salt/omv/deploy/rsync/files/cron-rsync.j2
+++ b/deb/openmediavault/srv/salt/omv/deploy/rsync/files/cron-rsync.j2
@@ -12,7 +12,7 @@ PATH=/usr/local/sbin:/usr/local/bin:/sbin:/bin:/usr/sbin:/usr/bin
 {{ separator }}{% if job.everyndayofmonth | to_bool %}*/{{ job.dayofmonth }}{% else %}{{ job.dayofmonth }}{% endif -%}
 {{ separator }}{{ job.month }}{{ separator }}{{ job.dayofweek -}}
 {{ separator }}{{ user -}}
-{{ separator }}{{ scripts_dir | path_join(script_prefix, job.uuid) -}}
+{{ separator }}{{ scripts_dir | path_join(script_prefix ~ job.uuid) -}}
 {%- if not job.sendemail | to_bool -%}
 {{ separator }}>/dev/null 2>&1
 {%- else -%}
