--- a/deb/openmediavault/srv/salt/omv/deploy/avahi/services/files/template.j2
+++ b/deb/openmediavault/srv/salt/omv/deploy/avahi/services/files/template.j2
@@ -5,8 +5,8 @@
     <service>
         <type>{{ type }}</type>
         <port>{{ port }}</port>
-{% if textrecord is defined %}
+{%- if textrecord is defined %}
         <txt-record>{{ textrecord }}</txt-record>
-{% endif %}
+{%- endif %}
     </service>
 </service-group>
