--- a/deb/openmediavault/srv/salt/omv/deploy/nginx/files/site-webgui.j2
+++ b/deb/openmediavault/srv/salt/omv/deploy/nginx/files/site-webgui.j2
@@ -39,7 +39,7 @@ server {
     location ~ \.php$ {
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass unix:/var/run/php-fpm-openmediavault-webgui.sock;
+        fastcgi_pass unix:/run/php/php7.3-fpm-openmediavault-webgui.sock;
         fastcgi_index index.php;
         fastcgi_read_timeout {{ fastcgi_read_timeout }};
         include fastcgi.conf;
